--- a/src/Client/CognitiveServicesSample.Client/Views/CategorizedImagePage.xaml
+++ b/src/Client/CognitiveServicesSample.Client/Views/CategorizedImagePage.xaml
@@ -6,7 +6,7 @@
              xmlns:Controls="clr-namespace:CognitiveServicesSample.Client.Controls"
              xmlns:FFImageLoading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="CognitiveServicesSample.Client.Views.CategolizedImagePage"
+             x:Class="CognitiveServicesSample.Client.Views.CategorizedImagePage"
              Title="{Binding JaCategory}">
     <ContentPage.Padding>
         <OnPlatform x:TypeArguments="Thickness">
